Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22554

tst_qscreen is broken on Linux

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.0.0
    • 5.0.0
    • Testing: qtestlib
    • None
    • Broken on at least Ubuntu 10.04 (32-bit) and 11.04 (64-bit), both with QPA.
    • 5116a25a55384d42d6e2d7df0bdeb0fd35799769

    Description

      ********* Start testing of tst_QScreen *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS : tst_QScreen::initTestCase()
      FAIL! : tst_QScreen::angleBetween(Portrait Landscape) Compared values are not the same
      Actual (QScreen::angleBetween(a, b)): 90
      Expected (expected): 270
      Loc: [tst_qscreen.cpp(103)]
      FAIL! : tst_QScreen::angleBetween(Portrait InvertedPortrait) Compared values are not the same
      Actual (QScreen::angleBetween(a, b)): 270
      Expected (expected): 180
      Loc: [tst_qscreen.cpp(103)]
      FAIL! : tst_QScreen::angleBetween(Portrait InvertedLandscape) Compared values are not the same
      Actual (QScreen::angleBetween(a, b)): 8
      Expected (expected): 90
      Loc: [tst_qscreen.cpp(103)]
      FAIL! : tst_QScreen::angleBetween(InvertedLandscape InvertedPortrait) Compared values are not the same
      Actual (QScreen::angleBetween(a, b)): 0
      Expected (expected): 90
      Loc: [tst_qscreen.cpp(103)]
      FAIL! : tst_QScreen::angleBetween(InvertedLandscape Landscape) Compared values are not the same
      Actual (QScreen::angleBetween(a, b)): 136913280
      Expected (expected): 180
      Loc: [tst_qscreen.cpp(103)]
      FAIL! : tst_QScreen::transformBetween(Portrait Landscape) Compared values are not the same
      Loc: [tst_qscreen.cpp(163)]
      FAIL! : tst_QScreen::transformBetween(Portrait InvertedPortrait) Compared values are not the same
      Loc: [tst_qscreen.cpp(163)]
      FAIL! : tst_QScreen::transformBetween(Portrait InvertedLandscape) Compared values are not the same
      Loc: [tst_qscreen.cpp(163)]
      FAIL! : tst_QScreen::transformBetween(InvertedLandscape InvertedPortrait) Compared values are not the same
      Loc: [tst_qscreen.cpp(163)]
      FAIL! : tst_QScreen::transformBetween(InvertedLandscape Landscape) Compared values are not the same
      Loc: [tst_qscreen.cpp(163)]
      PASS : tst_QScreen::cleanupTestCase()
      Totals: 2 passed, 10 failed, 0 skipped
      ********* Finished testing of tst_QScreen *********
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            bdo Jo Asplin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes