tests/auto/gui/kernel/qscreen/qscreen.pro
@@ -4,5 +4,3 @@ TARGET = tst_qscreen
 QT += core-private gui-private testlib
 
 SOURCES  += tst_qscreen.cpp
-
-CONFIG += insignificant_test # QTBUG-22554
